--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -16,11 +16,11 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
       li(class="nav-item")
         a(
           class="nav-link me-2"
-          href="<?=_WEB_HOST?>/khach/index" 
+          href="/" 
           aria-current="page"
         )| Trang chủ
       li(class="nav-item")
-        a(class="nav-link me-2"  href="<?=_WEB_HOST?>/khach/rooms") Phòng
+        a(class="nav-link me-2"  href="/rooms") Phòng
       li(class="nav-item")
         a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/facilities") Dịch vụ
       li(class="nav-item")
