--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -1,4 +1,45 @@
 extends ../../layouts/default.pug
 
 block main
-    h1 #{pageTitle}
+    h1 Trang danh sách phòng 
+
+    table.table.table-hover.table-sm 
+      thead 
+        tr 
+          th STT
+          th Hình ảnh
+          th Tiêu đề
+          th Giá
+          th Loại khách
+          //- th Vị trí
+          th Trạng thái
+          //- th Người tạo
+          //- th Người cập nhật
+          th Hành động
+
+      tbody 
+        each item, index in rooms
+          tr 
+            td #{index + 1}
+            td 
+              img(
+                  src=item.thumbnail
+                  alt=item.title
+                  width="100px"
+                  height="auto"
+              )
+            td #{item.title}
+            td #{item.price}
+            td
+              span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
+              br
+              span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
+            td  
+              if(item.status == "active")
+                  a(href="#" class="badge badge-success") Hoạt động
+              else
+                  a(href="#" class="badge badge-danger") Dừng hoạt động
+
+            td      
+              button(class="btn btn-warning btn-sm") Sửa
+              button(class="btn btn-danger btn-sm ml-1") Xóa
