--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/filter-status.pug
 include ../../mixins/search.pug
+include ../../mixins/pagination.pug
 
 block main
     h1 Trang danh sách phòng 
@@ -52,3 +53,5 @@ block main
             td      
               button(class="btn btn-warning btn-sm") Sửa
               button(class="btn btn-danger btn-sm ml-1") Xóa
+
+    +pagination(pagination)
