--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -63,23 +63,27 @@ block main
                   span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
                 td  
                   if(item.status == "active")
-                      a(
-                        href="javascript:;"
-                        data-status=item.status
-                        data-id=item.id
-                        button-change-status 
-                        class="badge badge-success"
-                      ) Hoạt động
+                    a(
+                      href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status 
+                      class="badge badge-success"
+                    ) Hoạt động
                   else
-                      a(
-                        href="javascript:;"
-                        data-status=item.status
-                        data-id=item.id
-                        button-change-status 
-                        class="badge badge-danger"
-                      ) Dừng hoạt động        
+                    a(
+                      href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status 
+                      class="badge badge-danger"
+                    ) Dừng hoạt động        
                 td      
                   button(class="btn btn-warning btn-sm") Sửa
-                  button(class="btn btn-danger btn-sm ml-1") Xóa
+                  button(
+                    class="btn btn-danger btn-sm ml-1"
+                    button-delete
+                    data-id=item.id
+                  ) Xóa
 
     +pagination(pagination)
