--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -10,6 +10,7 @@ mixin form-change-multi(path)
             option(disabled selected) -- Chọn hành động --
             option(value="active") Hoạt động
             option(value="inactive") Dừng hoạt động
+            option(value="change-position") Thay đổi vị trí
             option(value="delete-all") Xóa tất cả
       .form-group 
           input(
