--- a/views/admin/mixins/pagination.pug
+++ b/views/admin/mixins/pagination.pug
@@ -7,21 +7,19 @@ mixin pagination(pagination)
                         class="page-link"
                         button-pagination=pagination.currentPage - 1
                     ) Trang trước
-            li(class="page-item")
-                button(class="page-link") 
-                -for (var i = 1; i <= pagination.totalPage; i++)
-                    li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
-                        button(
-                            class="page-link"
-                            button-pagination=i 
-                        ) #{i}
+            -for (var i = 1; i <= pagination.totalPage; i++)
+                li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
+                    button(
+                        class="page-link"
+                        button-pagination=i 
+                    ) #{i}
             if(pagination.currentPage < pagination.totalPage)
                 li(class="page-item")
                     button(
                         class="page-link"
                         button-pagination=pagination.currentPage + 1
                     ) Kế tiếp
-            if(pagination.currentPage == pagination.totalPage - 2)
+            if(pagination.currentPage <= pagination.totalPage)
                 li(class="page-item")
                     button(
                         class="page-link"
