--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -3,96 +3,98 @@ include ../../mixins/filter-status.pug
 include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
+include ../../mixins/alert.pug
 
 block main
-    h1 Trang danh sách phòng 
-    .card.mb-3
-      .card-header Bộ lọc và Tìm kiếm
-      .card-body
-        .row 
-          .col-6
-            +filter-status    
-          .col-6     
-            +search(keyword)
-    .card.mb-3
-      .card-header Danh sách phòng
-      .card-body
-        +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+  +alert-success(5000)
+  h1 Trang danh sách phòng 
+  .card.mb-3
+    .card-header Bộ lọc và Tìm kiếm
+    .card-body
+      .row 
+        .col-6
+          +filter-status    
+        .col-6     
+          +search(keyword)
+  .card.mb-3
+    .card-header Danh sách phòng
+    .card-body
+      +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
 
-        table(
-          class="table table-hover table-sm "
-          checkbox-multi 
-        )
-          thead 
+      table(
+        class="table table-hover table-sm "
+        checkbox-multi 
+      )
+        thead 
+          tr 
+            th 
+              input(type="checkbox" name="checkall")
+            th STT
+            th Hình ảnh
+            th Tiêu đề
+            th Giá
+            th Loại khách
+            th Vị trí
+            th Trạng thái
+            //- th Người tạo
+            //- th Người cập nhật
+            th Hành động
+
+        tbody 
+          each item, index in rooms
             tr 
-              th 
-                input(type="checkbox" name="checkall")
-              th STT
-              th Hình ảnh
-              th Tiêu đề
-              th Giá
-              th Loại khách
-              th Vị trí
-              th Trạng thái
-              //- th Người tạo
-              //- th Người cập nhật
-              th Hành động
-
-          tbody 
-            each item, index in rooms
-              tr 
-                td 
-                  input(
-                    type="checkbox"
-                    name="id"
-                    value=item.id  
-                  )
-                td #{index + 1}
-                td 
-                  img(
-                      src=item.thumbnail
-                      alt=item.title
-                      width="100px"
-                      height="auto"
-                  )
-                td #{item.name}
-                td #{item.price}
-                
-                td
-                  span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
-                  br
-                  span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
-                td 
-                  input(
-                    type="number"
-                    value=item.position
-                    style="width: 60px"
-                    min="1"
-                    name="position" 
-                  )
-                td  
-                  if(item.status == "active")
-                    a(
-                      href="javascript:;"
-                      data-status=item.status
-                      data-id=item.id
-                      button-change-status 
-                      class="badge badge-success"
-                    ) Hoạt động
-                  else
-                    a(
-                      href="javascript:;"
-                      data-status=item.status
-                      data-id=item.id
-                      button-change-status 
-                      class="badge badge-danger"
-                    ) Dừng hoạt động        
-                td      
-                  button(class="btn btn-warning btn-sm") Sửa
-                  button(
-                    class="btn btn-danger btn-sm ml-1"
-                    button-delete
+              td 
+                input(
+                  type="checkbox"
+                  name="id"
+                  value=item.id  
+                )
+              td #{index + 1}
+              td 
+                img(
+                    src=item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="auto"
+                )
+              td #{item.name}
+              td #{item.price}
+              
+              td
+                span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
+                br
+                span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
+              td 
+                input(
+                  type="number"
+                  value=item.position
+                  style="width: 60px"
+                  min="1"
+                  name="position" 
+                )
+              td  
+                if(item.status == "active")
+                  a(
+                    href="javascript:;"
+                    data-status=item.status
                     data-id=item.id
-                  ) Xóa
+                    button-change-status 
+                    class="badge badge-success"
+                  ) Hoạt động
+                else
+                  a(
+                    href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status 
+                    class="badge badge-danger"
+                  ) Dừng hoạt động        
+              td      
+                button(class="btn btn-warning btn-sm") Sửa
+                button(
+                  class="btn btn-danger btn-sm ml-1"
+                  button-delete
+                  data-id=item.id
+                ) Xóa
 
-    +pagination(pagination)
+  +pagination(pagination)
