--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -19,7 +19,14 @@ block main
   .card.mb-3
     .card-header Danh sách phòng
     .card-body
-      +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+      .row 
+        .col-8
+          +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+        .col-4 
+          a(
+            href=`${prefixAdmin}/rooms/create`
+            class="btn btn-outline-success"
+          ) + Thêm mới
 
       table(
         class="table table-hover table-sm "
