--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -6,7 +6,7 @@ block main
     action=`${prefixAdmin}/rooms/create`
     id="form-create-product"
     method="POST"
-
+    enctype="multipart/form-data"
   )
     div(class="form-group")
       label(for="title") Tên 
