--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -103,10 +103,14 @@ block main
                     button-change-status 
                     class="badge badge-danger"
                   ) Dừng hoạt động        
-              td      
+              td 
+                a(
+                  href=`${prefixAdmin}/rooms/detail/${item.id}`
+                  class="btn btn-secondary btn-sm"
+                ) Chi tiết     
                 a(
                   href=`${prefixAdmin}/rooms/edit/${item.id}`
-                  class="btn btn-warning btn-sm"
+                  class="btn btn-warning btn-sm ml-1"
                 ) Sửa
                 button(
                   class="btn btn-danger btn-sm ml-1"
