6. Xây dựng phần quản lý danh mục phòng (Phần 1)

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -4,4 +4,6 @@
       li 
         a(href=`${prefixAdmin}/dashboard`) Tổng quan 
       li 
-        a(href=`${prefixAdmin}/rooms`) Phòng
+        a(href=`${prefixAdmin}/rooms`) Danh sách phòng
+      li 
+        a(href=`${prefixAdmin}/rooms-category`) Danh mục phòng
