--- a/views/admin/pages/rooms-category/create.pug
+++ b/views/admin/pages/rooms-category/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 
 block main
@@ -21,22 +22,10 @@ block main
       )
     div(class="form-group")
       label(for="parent_id") Danh mục cha
-      input(
-        type="text"
-        class="form-control"
-        id="parent_id"
-        name="parent_id"
-      )
-    //- input(
-      //-   type="text"
-      //-   class="form-control"
-      //-   id="parent_id"
-      //-   name="parent_id"
-      //- )
       select(
-          name="parent_id"
-          id="parent_id"
-          class="form-control"
+        name="parent_id"
+        id="parent_id"
+        class="form-control"
         )
           option(value="") -- Chọn danh mục cha --
           if(records)
