--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -16,7 +16,7 @@ block main
         .col-6
           +filter-status    
         .col-6     
-          +search(keyword)
+          //- +search(keyword)
   .card.mb-3
     .card-header Sắp xếp
     .card-body
