--- a/views/admin/pages/rooms-category/index.pug
+++ b/views/admin/pages/rooms-category/index.pug
@@ -1,9 +1,25 @@
 extends ../../layouts/default.pug
+include ../../mixins/filter-status.pug
+include ../../mixins/search.pug
+include ../../mixins/pagination.pug
 include ../../mixins/table-tree.pug
 block main
 
   h1 Danh mục sản phẩm
-
+  .card.mb-3
+    .card-header Bộ lọc và Tìm kiếm
+    .card-body
+      .row 
+        .col-6
+          +filter-status    
+        .col-6     
+          +search(keyword)
+  //- .card.mb-3
+  //-   .card-header Sắp xếp
+  //-   .card-body
+  //-     .row
+  //-       .col-4
+  //-         +sort()
   .card.mb-3
     .card-header Danh sách
       .card-body
@@ -32,3 +48,5 @@ block main
 
           tbody
             +table-tree(records)
+
+  +pagination(pagination)
