--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -5,7 +5,7 @@ block main
   +alert-error(5000)
   +alert-success(5000)
 
-  h1(class="mb-4") Thêm mới sản phẩm
+  h1(class="mb-4") Thêm mới phòng
 
   form(
     action=`${prefixAdmin}/rooms/create`
