--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -24,10 +24,10 @@ block main
         required
       )
     div(class="form-group")
-      label(for="product_category_id") Danh mục
+      label(for="room_category_id") Danh mục
       select(
-        name="product_category_id"
-        id="product_category_id"
+        name="room_category_id"
+        id="room_category_id"
         class="form-control"
       )
         option(value="") -- Chọn danh mục --
