--- a/views/admin/pages/rooms/edit.pug
+++ b/views/admin/pages/rooms/edit.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
@@ -14,15 +15,26 @@ block main
     enctype="multipart/form-data"
   )
     div(class="form-group")
-        label(for="title") Tên
-        input(
-            type="text"
-            class="form-control"
-            id="name"
-            name="name"
-            required
-            value=room.name
-        )
+      label(for="title") Tên
+      input(
+        type="text"
+        class="form-control"
+        id="name"
+        name="name"
+        required
+        value=room.name
+      )
+    div(class="form-group")
+      label(for="room_category_id") Danh mục
+      div #{room.room_category_id}
+      select(
+        name="room_category_id"
+        id="room_category_id"
+        class="form-control"
+      )
+        option(value="") -- Chọn danh mục --
+        if(category)
+          +select-tree(category, 1, room.room_category_id)
     div(class="form-group")
         label(for="desc") Mô tả
         textarea(
