--- a/views/admin/pages/rooms-category/edit.pug
+++ b/views/admin/pages/rooms-category/edit.pug
@@ -3,7 +3,7 @@ include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
 block main
-  h1(class="mb-4") Chỉnh sửa danh mục sản phẩm
+  h1(class="mb-4") Chỉnh sửa danh mục phòng
 
   +alert-error(5000)
 
