1. Xóa danh mục  sản phẩm

--- a/views/admin/pages/rooms-category/index.pug
+++ b/views/admin/pages/rooms-category/index.pug
@@ -42,5 +42,12 @@ block main
 
           tbody
             +table-tree(records)
-
+  
   +pagination(pagination)
+
+  form(
+    action=""
+    method="POST"
+    id="form-delete-item"
+    data-path=`${prefixAdmin}/rooms-category/delete`
+  )
