--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -150,4 +150,4 @@ block main
         class="btn btn-primary"
       ) Tạo mới
 
-    //- script(src="/admin/js/product.js")
+    script(src="/admin/js/room.js")
