4. Làm giao diện trang cơ sở vật chất

--- a/views/admin/pages/rooms-category/index.pug
+++ b/views/admin/pages/rooms-category/index.pug
@@ -22,7 +22,7 @@ block main
           .col-4
             a(
               href=`${prefixAdmin}/rooms-category/create`
-              class="btn btn-outline-success"
+              class="btn btn-outline-success mb-3"
             ) + Thêm mới
 
         table(
