--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -7,3 +7,5 @@
         a(href=`${prefixAdmin}/rooms`) Danh sách phòng
       li 
         a(href=`${prefixAdmin}/rooms-category`) Danh mục phòng
+      li 
+        a(href=`${prefixAdmin}/rooms-facility`) Cơ sở vật chất
