--- a/views/admin/pages/rooms-facility/index.pug
+++ b/views/admin/pages/rooms-facility/index.pug
@@ -1,38 +1,17 @@
 extends ../../layouts/default.pug
-include ../../mixins/filter-status.pug
-include ../../mixins/search.pug
-include ../../mixins/pagination.pug
-include ../../mixins/form-change-multi.pug
-include ../../mixins/alert.pug
-include ../../mixins/sort.pug
+
 
 block main
-  +alert-success(5000)
-  h1 Trang danh sách phòng 
   .card.mb-3
-    .card-header Bộ lọc và Tìm kiếm
-    .card-body
-      .row 
-        .col-6
-          +filter-status    
-        .col-6     
-          +search(keyword)
-  .card.mb-3
-    .card-header Sắp xếp
-    .card-body
-      .row
-        .col-4
-          +sort()
-  .card.mb-3
-    .card-header Danh sách phòng
+    .card-header Danh sách cơ sở vật chất
     .card-body
       .row 
         .col-8
-          +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
+          //- +form-change-multi(`${prefixAdmin}/rooms/change-multi?_method=PATCH`)
         .col-4 
           a(
-            href=`${prefixAdmin}/rooms/create`
-            class="btn btn-outline-success"
+            href=`${prefixAdmin}/rooms-facility/create`
+            class="btn btn-outline-success mb-3"
           ) + Thêm mới
 
       table(
@@ -44,18 +23,14 @@ block main
             th 
               input(type="checkbox" name="checkall")
             th STT
-            th Hình ảnh
+            th Icon
             th Tiêu đề
-            th Giá
-            th Loại khách
             th Vị trí
             th Trạng thái
-            //- th Người tạo
-            //- th Người cập nhật
             th Hành động
 
         tbody 
-          each item, index in rooms
+          each item, index in records
             tr 
               td 
                 input(
@@ -63,21 +38,15 @@ block main
                   name="id"
                   value=item.id  
                 )
-              td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
+              //- td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
               td 
                 img(
-                    src=item.thumbnail
-                    alt=item.title
-                    width="100px"
-                    height="auto"
+                  src=item.icon
+                  alt=item.title
+                  width="100px"
+                  height="auto"
                 )
-              td #{item.name}
-              td #{item.price}
-              
-              td
-                span(class="badge rounded-pill bg-light text-dark") Adult: #{item.adult}
-                br
-                span(class="badge rounded-pill bg-light text-dark") Children: #{item.children}
+              td #{item.title}
               td 
                 input(
                   type="number"
@@ -105,11 +74,11 @@ block main
                   ) Dừng hoạt động        
               td 
                 a(
-                  href=`${prefixAdmin}/rooms/detail/${item.id}`
+                  href=`${prefixAdmin}/rooms-facility/detail/${item.id}`
                   class="btn btn-secondary btn-sm"
                 ) Chi tiết     
                 a(
-                  href=`${prefixAdmin}/rooms/edit/${item.id}`
+                  href=`${prefixAdmin}/rooms-facility/edit/${item.id}`
                   class="btn btn-warning btn-sm ml-1"
                 ) Sửa
                 button(
@@ -117,5 +86,3 @@ block main
                   button-delete
                   data-id=item.id
                 ) Xóa
-
-  +pagination(pagination)
