--- a/views/admin/pages/rooms-facility/index.pug
+++ b/views/admin/pages/rooms-facility/index.pug
@@ -38,7 +38,7 @@ block main
                   name="id"
                   value=item.id  
                 )
-              //- td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
+              td #{index + 1}
               td 
                 img(
                   src=item.icon
