3. Phần xóa cơ sở vật chất

--- a/views/admin/pages/rooms-facility/index.pug
+++ b/views/admin/pages/rooms-facility/index.pug
@@ -86,3 +86,11 @@ block main
                   button-delete
                   data-id=item.id
                 ) Xóa
+  form(
+    action=""
+    method="POST"
+    id="form-delete-item"
+    data-path=`${prefixAdmin}/rooms-facility/delete`
+  )  
+
+  script(src="/admin/js/script.js")
