--- a/views/admin/pages/rooms-facility/index.pug
+++ b/views/admin/pages/rooms-facility/index.pug
@@ -1,9 +1,19 @@
 extends ../../layouts/default.pug
-
+include ../../mixins/filter-status.pug
+include ../../mixins/search.pug
+include ../../mixins/pagination.pug
 
 block main
   .card.mb-3
     .card-header Danh sách cơ sở vật chất
+    .card.mb-3
+      .card-header Bộ lọc và Tìm kiếm
+      .card-body
+        .row 
+          .col-6
+            +filter-status    
+          .col-6     
+            +search(keyword)
     .card-body
       .row 
         .col-8
@@ -92,5 +102,6 @@ block main
     id="form-delete-item"
     data-path=`${prefixAdmin}/rooms-facility/delete`
   )  
+  +pagination(pagination)
 
   script(src="/admin/js/script.js")
