--- a/views/admin/pages/rooms/create.pug
+++ b/views/admin/pages/rooms/create.pug
@@ -52,9 +52,22 @@ block main
         min="0"
       )
     div(class="form-group")
+      label(for="price") Cơ sở vật chất:
+      .row 
+        each facility in facilities 
+          .col-3
+            label
+              input(
+                value=facility.id 
+                name="room_facilities_id" 
+                type="checkbox"
+                )
+              |  #{facility.title}
+            
+    div(class="form-group")
       .row
         .col-6 
-          label(for="price") Người lớn
+          label(for="price") Người lớn:
           input(
             type="number"
             class="form-control"
@@ -64,7 +77,7 @@ block main
             min="0"
           )
         .col-6 
-          label(for="price") Trẻ em
+          label(for="price") Trẻ em:
           input(
             type="number"
             class="form-control"
