--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -11,3 +11,5 @@
         a(href=`${prefixAdmin}/rooms-facility`) Cơ sở vật chất
       li
         a(href=`${prefixAdmin}/roles`) Nhóm quyền
+      li
+        a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
